--- a/client/src/styles/AuthStyles.css
+++ b/client/src/styles/AuthStyles.css
@@ -1,20 +1,20 @@
 /* ===================================
 ========= register page  */
 .form-container {
-  margin-top: 60px;
+  margin-top: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   min-height: 70vh;
-  flex-direction: column;
-  background-color: #ffdee9;
-  background-image: linear-gradient(0deg, #ffdee9 0%, #b5fffc 100%);
+  
+  background-color: #ffdee927;
+  
 }
 
 .form-container form {
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 20px;
-  background-color: #fff;
+  background-color: #ffffff79;
 }
 
 .form-container form .title {
