--- a/client/src/styles/Header.css
+++ b/client/src/styles/Header.css
@@ -2,7 +2,7 @@
 
 /* Dark mode styles for the navbar */
 .navbar.dark-mode {
-    background-color: #1c1c1c; /* Darker gray for the navbar */
+    background-color: grey; /* Darker gray for the navbar */
     
   }
   
@@ -11,6 +11,7 @@
     background-color: #007bff; /* Vibrant blue */
     color: white;
     border: none;
+
     padding: 8px 12px;
     border-radius: 50%;
     cursor: pointer;
@@ -32,6 +33,7 @@
   right: 40px;  /* Distance from the right side of the page */
   /* You can also use 'left' or 'bottom' to further adjust the position */
   z-index: 1000;  /* Ensures the icon stays on top of other elements */
+  
 }
 
   
